contour/manifests/echoserver-wildcard-fqdn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: ghcr.io/tsaarni/echoserver:latest
        ports:
        - name: http-api
          containerPort: 8080
        - name: https-api
          containerPort: 8443
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  selector:
    app: echoserver
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver1
spec:
  virtualhost:
    fqdn: "*"
    tls:
      secretName: ingress
      enableFallbackCertificate: true
  routes:
    - services:
        - name: echoserver
          port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver2
spec:
  virtualhost:
    fqdn: "*.127-0-0-101.nip.io"
    tls:
      secretName: echoserver2
  routes:
    - services:
        - name: echoserver
          port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver3
spec:
  virtualhost:
    fqdn: echoserver.127-0-0-101.nip.io
    tls:
      secretName: echoserver3
  routes:
    - services:
        - name: echoserver
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echoserver
            port:
              number: 80
